fixed logo on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -5,7 +5,14 @@ body {
 }
 
 .navbar { min-height: 90px; }
-.navbar-brand img { height: 80px; }
+
+@media (min-width:0px) {
+  .navbar-brand img { height: 40px; }
+}
+@media (min-width:768px) {
+  .navbar-brand img { height: 80px; }
+}
+
 .navbar-nav > li > a { padding-bottom: 10px; padding-top: 10px; }
 .navbar-nav { padding-top: 60px; }
 
